2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03712] buf fix of LINE_INFO
	* main.c (curlno): rewrite

2003-01-30  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03709] Re: view source, edit source
	* display.c (displayBuffer): INIT_BUFFER_WIDTH
	* file.c (_saveBuffer): added
		(saveBuffer): use _saveBuffer
		(saveBufferBody): added
	* main.c (vmSrc): saveBufferBody
	* proto.h (saveBufferBody): added

2003-01-30  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev-en 00852] Re: Enhancement: content type detection of files
	* url.c (DefaultGuess): remove upppercases
		(guessContentTypeFromTable): rewrite, strcasecmp

2003-01-30  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03708] Re: Don't stop loading image when moving to next page.
	* config.h.dist (lstat): define ifndef HAVE_LSTAT
	* configure (config.h) ditto
	* display.c (fmTerm): new loadImage
		(save_current_buf): only ifdef USE_BUFINFO
		(displayBuffer): new loadImage
	* etc.c (setup_child): TrapSignal
	* file.c (loadGeneralFile): TRAP_OFF, TRAP_ON
		(loadHTMLstream): ditto
		(loadGopherDir): ditto
		(loadBuffer): ditto
		(loadImageBuffer): ditto
		(getNextPage): ditto
		(save2tmp): ditto
	* fm.h (TrapSignal): added
		(TRAP_ON): added
		(TRAP_OFF): added
	* form.c (HAVE_LSTAT): deleted
	* frame.c (createFrameFile): TRAP_OFF, TRAP_ON
	* image.c (image_buffer): added
		(deleteImage): new loadImage
		(getAllImage): initialize image_buffer
		(loadImage): rewrite
	* main.c (main): new loadImage
		(checkDownloadList): remove ifdef HAVE_LSTAT
	* news.c (loadNwesgroup): TRAP_ON, TRAP_OFF
	* proto.h (loadImage): add buf arg
	* url.c (openSocket): TRAP_ON, TRAP_OFF
		(check_no_proxy): TRAP_ON, TRAP_OFF

2003-01-29  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03707] Don't stop loading image when moving to next page.
	* display.c (save_current_buf): required when defined USE_IMAGE
		(displayBuffer): stop only buffer changed