@@ -1,5 +1,11 @@
 2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03713] search with "$"
+	* search.c (forwardSearch): check l->next && l->next->bpos
+		(backwardSearch): check l->size, l->next && l->next->bpos
+
+2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03712] buf fix of LINE_INFO
 	* main.c (curlno): rewrite
 
